# keypoint-moseq

./: .codespellrc  .gitattributes  .gitignore  .readthedocs.yml  LICENSE.md  NOTICE.md  README.md  batch_utils.py  environment.linux_cpu.yml  environment.linux_gpu.yml  environment.win64_cpu.yml  environment.win64_gpu.yml  environment_cpu.yml  nb_extensions.sh  noxfile.py  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: test.yml
conda_envs/: environment.linux_cpu.yml  environment.linux_gpu.yml  environment.mac_cpu.yml  environment.win64_cpu.yml  environment.win64_gpu.yml
docs/: README.md  keypoint_moseq_colab.ipynb  keypoint_moseq_colab_quick.ipynb  requirements.txt
docs/source/: FAQs.rst  advanced.rst  analysis.ipynb  calibration.rst  changepoints.ipynb  colab.rst  conf.py  fitting.rst  index.rst  install.rst  io.rst  troubleshooting.rst  tutorial.ipynb  util.rst  viz.rst
docs/source/_static/: FAQs_style.css
examples/: keypointMoSeq_demo_colab.ipynb  keypointMoSeq_demo_local.ipynb
keypoint_moseq/: __init__.py  _paths.py  _version.py  analysis.py  calibration.py  fitting.py  io.py  logging_config.yaml  tools.py  util.py  viz.py  widgets.py  wrappers.py
keypoint_moseq/analysis/: __init__.py  analysis.py
keypoint_moseq/controller/: __init__.py  controller.py
keypoint_moseq/display/: jupyter_display.py
keypoint_moseq/model/: __init__.py  distributions.py  gibbs.py  initialize.py  kalman.py  transitions.py
keypoint_moseq/project/: __init__.py  calibration.py  fitting.py  io.py  kpms_project.py  viz.py
keypoint_moseq/view/: jupyter_display.py
notebooks/: result_visualization_colab.ipynb
scripts/: prepare_test_data.py
tests/: README.md  __init__.py  conftest.py  notebook_analysis.py  notebook_colab.py  notebook_modeling.py  run_colab_workflow.py  test_analysis.py  test_analysis_unit.py  test_colab_workflow.py  test_controller.py  test_fitting.py  test_io_unit.py  test_jupyter_display.py  test_jupyter_display_dash.py  test_kpms_project.py  test_modeling.py  test_util.py
tests/manual/: test_group_syllable_differences_plot.py
