[metadata]
name = keypoint-moseq
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/dattalab/keypoint-moseq
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    seaborn==0.13.0
    cytoolz
    matplotlib==3.8.4
    tqdm
    ipykernel
    imageio[ffmpeg]
    statsmodels
    pyyaml
    vidio
    holoviews[recommended]
    bokeh
    pandas
    tables
    networkx
    sleap_io
    pynwb
    ndx_pose
    plotly
    ipython_genutils
    tabulate
    commentjson
    jax-moseq>=0.2.2

[options.package_data]
* = *.md

[versioneer]
VCS = git
style = pep440
versionfile_source = keypoint_moseq/_version.py
versionfile_build = keypoint_moseq/_version.py
tag_prefix =
parentdir_prefix = 