[metadata]
name = keypoint-moseq
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/dattalab/keypoint-moseq
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    seaborn==0.13.0
    cytoolz
    matplotlib==3.8.4
    tqdm
    ipykernel
    imageio[ffmpeg]
    statsmodels
    pyyaml
    vidio
    holoviews[recommended]
    bokeh
    pandas
    tables
    bokeh==2.4.3
    panel==0.14.4
    holoviews==1.15.4
    networkx
    sleap_io
    pynwb
    ndx_pose
    plotly
    ipython_genutils
    tabulate
    commentjson
    jax-moseq
    numpy<=1.26.4
    ipywidgets
    ipympl
    jax<0.7.0 # Required for python >3.12 which will install a version of jax that tensorflow has not updated to use properly yet

[options.extras_require]
dev = 
    sphinx
    sphinx-rtd-theme
    autodocsumm
    myst-nb

cuda = 
    jax-moseq[cuda]

[options.package_data]
* = *.md

[versioneer]
VCS = git
style = pep440
versionfile_source = keypoint_moseq/_version.py
versionfile_build = keypoint_moseq/_version.py
tag_prefix =
parentdir_prefix = 